--- a/app/src/main/res/layout/fragment_all_coin.xml
+++ b/app/src/main/res/layout/fragment_all_coin.xml
@@ -12,17 +12,19 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.AllCoin">
+        tools:context=".ui.AllCoin"
+        android:background="@color/colorPrimary">
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewAllCoinId"
-            android:layout_marginTop="56dp"
             android:layout_width="409dp"
-            android:layout_height="729dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="56dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/allcoin_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
