--- a/app/src/main/res/layout/allcoin_item.xml
+++ b/app/src/main/res/layout/allcoin_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -10,7 +11,8 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -49,9 +51,10 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
                                 android:fontFamily="@font/aclonica"
-                                android:text="@string/coin_symbol"
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
+                                android:text="@{CryptoCoin.symbol}"
+                                android:textSize="12sp"
+                                android:textStyle="bold"
+                                tools:text="@string/coin_symbol" />
 
                         </RelativeLayout>
 
@@ -59,7 +62,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="wrap_content"
+                        android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
@@ -68,11 +71,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="30dp"
                             android:fontFamily="@font/carter_one"
-                            android:text="@string/coin_name"
+                            android:text="@{CryptoCoin.name}"
                             android:textColor="#ffffff"
-                            android:textSize="24sp" />
+                            android:textSize="18sp"
+                            tools:text="@string/coin_name" />
 
                         <TextView
                             android:id="@+id/coin_price"
@@ -81,9 +85,10 @@
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="0dp"
                             android:fontFamily="@font/gorditas"
-                            android:text="@string/coin_price"
+                            android:text="@{CryptoCoin.priceUsd}"
                             android:textColor="#ffffff"
-                            android:textSize="18sp" />
+                            android:textSize="14sp"
+                            tools:text="@string/coin_price" />
 
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -100,7 +105,8 @@
                             android:layout_marginTop="50dp"
                             android:layout_marginEnd="8dp"
                             android:fontFamily="@font/carme"
-                            android:text="@string/coin_price_ph"
+                            android:text="@{CryptoCoin.percentChange1h}"
+                            tools:text="@string/coin_price_ph"
                             android:textColor="#ffffff"
                             android:textSize="18sp"
                             android:textStyle="bold" />
