--- a/app/src/main/res/layout/fragment_favourite_coin.xml
+++ b/app/src/main/res/layout/fragment_favourite_coin.xml
@@ -18,9 +18,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewFavouriteCoinId"
-            android:layout_width="409dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="86dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
