--- a/app/src/main/res/layout/favouritecoin_item.xml
+++ b/app/src/main/res/layout/favouritecoin_item.xml
@@ -52,7 +52,7 @@
                                 android:fontFamily="@font/aclonica"
                                 android:text="@{CryptoCoin.symbol}"
                                 tools:text="@string/coin_symbol"
-                                android:textSize="20sp"
+                                android:textSize="12sp"
                                 android:textStyle="bold" />
 
                         </RelativeLayout>
@@ -70,12 +70,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="30dp"
                             android:fontFamily="@font/carter_one"
                             android:text="@{CryptoCoin.name}"
                             tools:text="@string/coin_name"
                             android:textColor="#ffffff"
-                            android:textSize="24sp" />
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/coin_price_favouriteId"
@@ -84,10 +84,10 @@
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="0dp"
                             android:fontFamily="@font/gorditas"
-                            android:text="@{CryptoCoin.priceUsd}"
+                            android:text='@{"$"+CryptoCoin.priceUsd}'
                             tools:text="@string/coin_price"
                             android:textColor="#ffffff"
-                            android:textSize="18sp" />
+                            android:textSize="14sp" />
 
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -104,7 +104,7 @@
                             android:layout_marginTop="50dp"
                             android:layout_marginEnd="8dp"
                             android:fontFamily="@font/carme"
-                            android:text="@{CryptoCoin.percentChange1h}"
+                            android:text='@{CryptoCoin.percentChange1h+"%"}'
                             tools:text="@string/coin_price_ph"
                             android:textColor="#ffffff"
                             android:textSize="18sp"
